source/datahub/main/default/objects/TriggerEnablerConfiguration__mdt/fields/AfterUpdateCondition__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdateCondition__c</fullName>
    <inlineHelpText>This is the condition to check before pushing to ECDs in the triggers. (e.g.: Status = &apos;Active&apos;)</inlineHelpText>
    <label>After Update Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>