source/datahub/main/default/objects/TriggerEnablerConfiguration__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>